# cognite-databricks

./: .coveragerc  .cursorrules  .dmypy.json  .gitignore  .pre-commit-config.yaml  .pre-commit-trigger.txt  .readthedocs.yaml  CODE_OF_CONDUCT.md  README.md  Technical Plan - CDF Databricks Integration (UDTF-Based).md  dev.py  fix_dup.py  mkdocs.yml  pr_description.md  pyproject.toml  update_build_timestamp.py
.github/workflows/: build.yml  release.yaml
cognite/: __init__.py
cognite/databricks/: __init__.py  _version.py  generator.py  models.py  secret_manager.py  sql_analyzer.py  time_series_udtfs.py  type_converter.py  udtf_registry.py  utils.py
docs/: index.md
docs/catalog_based/: example_config.toml  filtering.md  governance.md  index.md  joining.md  prerequisites.md  querying.md  quickstart.md  registration.md  secret_manager.md  time_series.md  time_series_sql.md  troubleshooting.md  views.md
docs/session_scoped/: filtering.md  index.md  installation.md  joining.md  querying.md  registration.md  time_series.md  troubleshooting.md
examples/catalog_based/: filtering_views.ipynb  joining_views.ipynb  querying_views.ipynb  quickstart.ipynb  registration_and_views.ipynb
examples/session_scoped/: basic_registration.ipynb  filtering_queries.ipynb  joining_udtfs.ipynb  querying_data.ipynb
tests/: __init__.py  conftest.py  test_udtf_registry.py  utils.py
tests/test_integration/: __init__.py  conftest.py  test_udtf_queries.py
tests/test_unit/: __init__.py  conftest.py  test_dbr_version_detection.py  test_generator.py  test_generator_advanced.py  test_generator_functions.py  test_generator_methods.py  test_models.py  test_secret_manager.py  test_sql_analyzer.py  test_type_converter.py  test_type_converter_databricks.py  test_udtf_registry.py  test_utils.py
